# bznames

./: LICENSE  README.md  bigram_models.ipynb  bigrams.ipynb  ibge.py  ngrams.ipynb  pyproject.toml  ruff.toml  setup.py
.agents/rules/: uv_pytest.md
bznames/: base.py  ngrams.py
bznames/tests/: test_ngrams.py
notebooks/: bigrams.ipynb  ngrams.ipynb
src/bznames/: __init__.py  base.py  ibge.py  metrics.py  ngrams.py  sampling.py  styles.css  tokenizer.py  viz.py
tests/: __init__.py  test_metrics.py  test_ngrams.py  test_sampling.py  test_tokenizer.py  test_viz.py
