[project]
name = "bznames"
version = "0.0.1"
description = "Brazilian name generator using language models"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rafael Ladeira" }
]
dependencies = [
    "requests",
    "numpy",
    "torch",
]

[dependency-groups]
dev = [
    "pytest",
    "tqdm",
    "ipykernel",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.src]
exclude = ["notebooks/**", ".venv/**"]

