[project]
name = "bznames"
version = "0.0.1"
description = "Brazilian name generator using language models"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Rafael Ladeira" }
]
dependencies = [
    "requests",
    "numpy",
    "torch",
    "matplotlib",
    "tqdm",
    "jax[cuda12]",
    "ipython>=9.14.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "ruff",
    "ty",
    "ipywidgets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.src]
exclude = ["notebooks/**", ".venv/**"]

